redoing semantic elements

--- a/aboutus.html
+++ b/aboutus.html
@@ -30,30 +30,28 @@
   <div id="pageWrapper">
     <header id="header" class="row">
       <nav>
-        <section id="navBar" class="nav-wrapper">
-          <a href="#!" id="brand" class="brand-logo center">Sensify</a>
-          <div id="navBar" class="nav-wrapper">
-            <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
-            <a href="./index.html" id="brand" class="brand-logo center">Sensify</a>
-            <ul id="navLinks" class="right">
-              <li><a href="./index.html"><i class="material-icons">home</i></a></li>
-            </ul>
-        </section>
+        <div id="navBar" class="nav-wrapper">
+          <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
+          <a href="./index.html" id="brand" class="brand-logo center">Sensify</a>
+          <ul id="navLinks" class="right">
+            <li><a href="./index.html"><i class="material-icons">home</i></a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
     <section class="row center-align">
       <div class="col s12">
-        <img src="./images/Sensify_edited-4_copy.png" style="width: 100px;">
+        <img src="./images/Sensify_edited-4_copy.png" style="width: 100px;" alt="logo edited">
       </div>
       <div class="col s12">
         <h1 id="aboutTitle">Meet the Team</h1>
       </div>
     </section>
 
-    <section class="row center-align">
+    <div class="row center-align">
       <div class="col s12 m4 cols">
-        <div class="card idCards" id="us">
+        <div class="card idCards" id="us1">
           <figure class="card-image">
             <img class="cropped" src="./images/daniellehillman.jpg" alt="Danielle Hillman">
           </figure>
@@ -61,13 +59,13 @@
             <p class="bioText">Hi, I'm Danielle.</p>
           </div>
           <hr>
-          <div id="cardLinks" class="card-action center-align">
+          <div id="cardLinks1" class="card-action center-align">
             <a href="http://daniellehillman.github.io/">Portfolio</a>
           </div>
         </div>
       </div>
       <div class="col s12 m4 cols">
-        <div class="card idCards" id="us">
+        <div class="card idCards" id="us2">
           <figure class="card-image">
             <img class="cropped" src="./images/Adam.jpg" alt="Adam Madueno">
           </figure>
@@ -75,13 +73,13 @@
             <p class="bioText">Hi, I'm Adam.</p>
           </div>
           <hr>
-          <div id="cardLinks" class="card-action center-align">
+          <div id="cardLinks2" class="card-action center-align">
             <a href="https://amadueno.github.io/homework2/index.html">Portfolio</a>
           </div>
         </div>
       </div>
       <div class="col s12 m4 cols">
-        <div class="card idCards" id="us">
+        <div class="card idCards" id="us3">
           <figure class="card-image">
             <img class="cropped" src="./images/mattjavier.jpg" alt="Matthew Javier">
           </figure>
@@ -89,16 +87,16 @@
             <p class="bioText">Hi, I'm Matt.</p>
           </div>
           <hr>
-          <div id="cardLinks" class="card-action center-align">
+          <div id="cardLinks3" class="card-action center-align">
             <a href="https://mattjavier.github.io">Portfolio</a>
           </div>
         </div>
       </div>
-    </section>
-    <section class="row center-align">
+    </div>
+    <div class="row center-align">
       <div class="col offset-m2"></div>
       <div class="col s12 m4 cols">
-        <div class="card idCards" id="us">
+        <div class="card idCards" id="us4">
           <figure class="card-image">
             <img class="cropped" src="./images/Daniel-Le.JPG" alt="Daniel Le">
           </figure>
@@ -106,13 +104,13 @@
             <p class="bioText">Hi, I'm Daniel.</p>
           </div>
           <hr>
-          <div id="cardLinks" class="card-action center-align">
+          <div id="cardLinks4" class="card-action center-align">
             <a href="https://danielle94869.github.io/responsive-portfolio/">Portfolio</a>
           </div>
         </div>
       </div>
       <div class="col s12 m4 cols">
-        <div class="card idCards" id="us">
+        <div class="card idCards" id="us5">
           <figure class="card-image">
             <img class="cropped" src="./images/danielayala.jpg" alt="Daniel Ayala">
           </figure>
@@ -120,13 +118,13 @@
             <p class="bioText">Hi, I'm Daniel.</p>
           </div>
           <hr>
-          <div id="cardLinks" class="card-action center-align">
+          <div id="cardLinks5" class="card-action center-align">
             <a href="https://daniboie.github.io/hw2-portfolio/index.html">Portfolio</a>
           </div>
         </div>
       </div>
       <div class="col offset-m2"></div>
-    </section>
+    </div>
   </div>
   <footer id="footer" class="page-footer">
     <div id="footerLinks" class="container">
@@ -146,7 +144,7 @@
     </div>
   </footer>
   <!-- jQuery if needed -->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
   <!-- axios cdn-->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
