--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
         <div id="navBar" class="nav-wrapper">
           <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
           <a href="./index.html" id="brand" class="brand-logo center">Sensify</a>
-
           <ul class="right">
             <li>
               <a href="./aboutus.html" class="right"><i class="material-icons">group</i></a>
             </li>
           </ul>
-         
         </div>
       </nav>
     </header>
@@ -70,7 +68,7 @@
           <div class="center-align">
             <button id="find-me" class="btn-large waves-effect allBtns">Find My Location</button>
             <p id="status"></p>
-            <a id="map-link" target="_blank"></a>
+            <a id="map-link" href="#" target="_blank"></a>
           </div>
 
           <!-- select a choice for mood -->
@@ -179,38 +177,31 @@
       </div>
 
       <!-- Show weather data for the city/current location -->
-      <section id="weather" class="col s12 m6 l6 center-align">
-        <aside class="row">
+      <aside id="weather" class="col s12 m6 l6 center-align">
+        <div class="row">
           <p id="currentCity"></p>
           <div class="col s12 m12">
             <div id="forecast" class="card">
             </div>
           </div>
-        </aside>
-        <h3 class="rightText">Sensify is a mobile web application built for you. Listen to music based on your location.
-          Tell us where you are and we
-          will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy
-          Sensify,
-          the
-          music app that senses where you are!</h3>
-
-        <i class="medium material-icons">music_note</i>
-        
-      </section>
+        </div>
+        <h3 class="rightText">Sensify is a mobile web application built for you. Listen to music based on your location. Tell us where you are and we will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify,the music app that senses where you are!</h3>
+        <i class="medium material-icons">music_note</i>    
+      </aside>
     </div>
   </div>
   <footer id="footer" class="page-footer footerStyle">
     <div id="footerLinks" class="container">
-      <section class="row">
+      <div class="row">
         <div class="col s12 center-align footerCol">
           <span id="codeIcon" class="material-icons">
             code
           </span>
         </div>
-        <footer class="col s12 center-align footerCol">
+        <div class="col s12 center-align footerCol">
           <a id="githubLink" href="https://github.com/daniellehillman/Group1/tree/master">GitHub</a>
-        </footer>
-      </section>
+        </div>
+      </div>
     </div>
     <div id="footerCopyright" class="footer-copyright center-align">
       <div id="copyright" class="container">
@@ -219,7 +210,7 @@
     </div>
   </footer>
   <!-- jQuery if needed -->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
   <!-- axios cdn-->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
